Fix tab switching event handling

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
         <div class="tab-container">
             <div class="tab-nav">
-                <button class="tab-btn active" onclick="openTab('news')" id="newsTab">News</button>
-                <button class="tab-btn" onclick="openTab('themen')" id="themenTab">Themen</button>
-                <button class="tab-btn" onclick="openTab('gruppen')" id="gruppenTab">Gruppen erstellen</button>
-                <button class="tab-btn" onclick="openTab('lehrer')" id="lehrerTab">Lehrer verwalten</button>
-                <button class="tab-btn" onclick="openTab('daten')" id="datenTab">Datenverwaltung</button>
-                <button class="tab-btn" onclick="openTab('bewerten')" id="bewertenTab">Schüler bewerten</button>
-                <button class="tab-btn" onclick="openTab('vorlagen')" id="vorlagenTab">Bewertungsvorlagen</button>
-                <button class="tab-btn" onclick="openTab('uebersicht')" id="uebersichtTab">Übersicht</button>
-                <button class="tab-btn" onclick="openTab('adminvorlagen')" id="adminvorlagenTab">System-Vorlagen</button>
+                <button class="tab-btn active" onclick="openTab('news', event)" id="newsTab">News</button>
+                <button class="tab-btn" onclick="openTab('themen', event)" id="themenTab">Themen</button>
+                <button class="tab-btn" onclick="openTab('gruppen', event)" id="gruppenTab">Gruppen erstellen</button>
+                <button class="tab-btn" onclick="openTab('lehrer', event)" id="lehrerTab">Lehrer verwalten</button>
+                <button class="tab-btn" onclick="openTab('daten', event)" id="datenTab">Datenverwaltung</button>
+                <button class="tab-btn" onclick="openTab('bewerten', event)" id="bewertenTab">Schüler bewerten</button>
+                <button class="tab-btn" onclick="openTab('vorlagen', event)" id="vorlagenTab">Bewertungsvorlagen</button>
+                <button class="tab-btn" onclick="openTab('uebersicht', event)" id="uebersichtTab">Übersicht</button>
+                <button class="tab-btn" onclick="openTab('adminvorlagen', event)" id="adminvorlagenTab">System-Vorlagen</button>
             </div>
 
             <!-- News Tab -->
