Add teacher permission for group creation

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <!-- Gruppen Tab -->
             <div id="gruppen" class="tab-content">
                 <h2>Gruppen erstellen</h2>
-                <div class="card">
+                <div class="card" id="gruppenCreateCard">
                     <h3>Neue Gruppe anlegen</h3>
                     <div class="input-group">
                         <input type="text" id="gruppenThema" placeholder="Thema (oder aus Liste wählen)">
