fix groups tab and visibility

--- a/css/index.html
+++ b/css/index.html
@@ -68,7 +68,7 @@
             <div class="tab-nav">
                 <button class="tab-btn active" onclick="openTab('news')" id="newsTab">News</button>
                 <button class="tab-btn" onclick="openTab('themen')" id="themenTab">Themen</button>
-                <button class="tab-btn" onclick="openTab('gruppen')" id="gruppenTab">Gruppen erstellen</button>
+                <button class="tab-btn" onclick="openTab('gruppen')" id="gruppenTab">Gruppen verwalten</button>
                 <button class="tab-btn" onclick="openTab('lehrer')" id="lehrerTab">Lehrer verwalten</button>
                 <button class="tab-btn" onclick="openTab('daten')" id="datenTab">Datenverwaltung</button>
                 <button class="tab-btn" onclick="openTab('bewerten')" id="bewertenTab">Schüler bewerten</button>
@@ -128,7 +128,7 @@
 
             <!-- Gruppen Tab -->
             <div id="gruppen" class="tab-content">
-                <h2>Gruppen erstellen</h2>
+                <h2>Gruppen verwalten</h2>
                 <div class="card">
                     <h3>Neue Gruppe anlegen</h3>
                     <div class="input-group">
