--- a/index.html
+++ b/index.html
@@ -469,18 +469,19 @@
     <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-database-compat.js"></script>
 
     <!-- JavaScript Module - Reihenfolge ist wichtig! -->
-    <script src="js/firebase-init.js"></script>
-    <script src="js/firebase-login.js"></script>
-    <script src="js/firebase-main.js"></script>
-    <script src="js/firebase-news.js"></script>
-    <script src="js/firebase-themen.js"></script>
-    <script src="js/firebase-gruppen.js"></script>
-    <script src="js/firebase-lehrer.js"></script>
-    <script src="js/firebase-klassen.js"></script>
-    <script src="js/firebase-bewertung.js"></script>
-    <script src="js/firebase-vorlagen.js"></script>
-    <script src="js/firebase-uebersicht.js"></script>
-    <script src="js/firebase-admin.js"></script>
-    <script src="js/pdf-generator.js"></script>
+    <script src="firebase-init.js"></script>
+    <script src="firebase-login.js"></script>
+    <script src="firebase-main.js"></script>
+    <script src="firebase-news.js"></script>
+    <script src="firebase-themen.js"></script>
+    <script src="firebase-gruppen.js"></script>
+    <script src="firebase-lehrer.js"></script>
+    <script src="firebase-klassen.js"></script>
+    <script src="firebase-bewertung.js"></script>
+    <script src="firebase-vorlagen.js"></script>
+    <script src="firebase-uebersicht.js"></script>
+    <script src="firebase-admin.js"></script>
+    <script src="firebase-datenverwaltung.js"></script>
+    <script src="pdf-generator.js"></script>
 </body>
 </html>
