--- a/index.html
+++ b/index.html
@@ -475,13 +475,12 @@
     <script src="firebase-news.js"></script>
     <script src="firebase-themen.js"></script>
     <script src="firebase-gruppen.js"></script>
-    <script src="firebase-lehrer.js"></script>
     <script src="firebase-klassen.js"></script>
     <script src="firebase-bewertung.js"></script>
     <script src="firebase-vorlagen.js"></script>
     <script src="firebase-uebersicht.js"></script>
     <script src="firebase-admin.js"></script>
     <script src="firebase-datenverwaltung.js"></script>
-    <script src="pdf-generator.js"></script>
+    <script src="firebase-pdf.js"></script>
 </body>
 </html>
