--- a/index.html
+++ b/index.html
@@ -561,21 +561,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/10.11.0/firebase-database-compat.min.js"></script>
 
     <!-- Application Scripts -->
-    <script src="js/firebase-config.js"></script>
-    <script src="js/firebase-auth.js"></script>
-    <script src="js/firebase-functions.js"></script>
-    <script src="js/firebase-news.js"></script>
-    <script src="js/firebase-themen.js"></script>
-    <script src="js/firebase-gruppen.js"></script>
-    <script src="js/firebase-klassen.js"></script>
-    <script src="js/firebase-lehrer.js"></script>
-    <script src="js/firebase-bewertung.js"></script>
-    <script src="js/firebase-staerken.js"></script>
-    <script src="js/firebase-vorlagen.js"></script>
-    <script src="js/firebase-uebersicht.js"></script>
-    <script src="js/firebase-admin.js"></script>
-    <script src="js/firebase-daten.js"></script>
-    <script src="js/firebase-pdf.js"></script>
-    <script src="js/app.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="firebase-auth.js"></script>
+    <script src="firebase-functions.js"></script>
+    <script src="firebase-news.js"></script>
+    <script src="firebase-themen.js"></script>
+    <script src="firebase-gruppen.js"></script>
+    <script src="firebase-klassen.js"></script>
+    <script src="firebase-lehrer.js"></script>
+    <script src="firebase-bewertung.js"></script>
+    <script src="firebase-staerken.js"></script>
+    <script src="firebase-vorlagen.js"></script>
+    <script src="firebase-uebersicht.js"></script>
+    <script src="firebase-admin.js"></script>
+    <script src="firebase-daten.js"></script>
+    <script src="firebase-pdf.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
