--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
                 <div class="card">
                     <h3>Neues Thema vorschlagen</h3>
                     <div class="input-group">
-                        <input type="text" id="neuesThema" placeholder="Thema eingeben...">
-                        <button class="btn btn-success" onclick="themaHinzufuegen()">Fächer auswählen & Thema erstellen</button>
-                    </div>
+    <input type="text" id="neuesThema" placeholder="Thema eingeben...">
+    <button class="btn btn-success" onclick="themaHinzufuegen()">Fächer auswählen & Thema erstellen</button>
+    <button class="btn" id="themenEditButton" onclick="toggleThemenEditMode()">✏️ Themen bearbeiten</button>
+</div>
                 </div>
                 <div class="filter-section">
                     <div class="filter-group">
