Integrate DOCX template for PDF generation

--- a/index.html
+++ b/index.html
@@ -736,6 +736,10 @@
     <script src="firebase-admin.js"></script>
     <script src="firebase-datenverwaltung.js"></script>
     <script src="firebase-uebersicht.js"></script>
+    <!-- Bibliotheken für DOCX-Verarbeitung -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzip/3.2.5/pizzip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/docxtemplater/3.37.2/docxtemplater.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docx-preview@0.3.5/dist/docx-preview.min.js"></script>
     <script src="firebase-pdf.js"></script>
     <script src="firebase-init.js"></script>
 
