--- a/index.html
+++ b/index.html
@@ -170,12 +170,14 @@
         }
 
         .gruppenerstellung-bereich {
+            display: none;
             transition: all 0.3s ease;
             opacity: 0.5;
             pointer-events: none;
         }
 
         .gruppenerstellung-bereich.active {
+            display: block;
             opacity: 1;
             pointer-events: auto;
         }
@@ -303,7 +305,7 @@
                     </label>
                 </div>
 
-                <div class="card gruppenerstellung-bereich" id="gruppenErstellungBereich">
+                <div class="card gruppenerstellung-bereich hidden" id="gruppenErstellungBereich">
                     <h3>Neue Gruppe anlegen</h3>
                     <div class="input-group">
                         <input type="text" id="gruppenThema" placeholder="Thema (oder aus Liste wählen)">
@@ -716,11 +718,13 @@
         function toggleGruppenerstellung() {
             const toggle = document.getElementById('gruppenErstellungToggle');
             const bereich = document.getElementById('gruppenErstellungBereich');
-            
+
             if (toggle.checked) {
+                bereich.classList.remove('hidden');
                 bereich.classList.add('active'); // Macht den Bereich sichtbar und interaktiv
             } else {
-                bereich.classList.remove('active'); // Macht den Bereich halb-transparent und nicht interaktiv
+                bereich.classList.remove('active'); // Macht den Bereich unsichtbar
+                bereich.classList.add('hidden');
             }
         }
 
